adicionado pagina cursoinvest.html alterações style.css index.html cursos.html

--- a/cursos.html
+++ b/cursos.html
@@ -20,7 +20,7 @@
             </div>
             <div id="link-menu">
                 <nav>
-                    <a href="">CURSOS</a>
+                    <a href="cursos.html">CURSOS</a>
                     <a href="">BLOG</a>
                     <a href="">CONTATO</a>
                 </nav>
@@ -34,6 +34,7 @@
             <h1>Cursos</h1>
             <p>Educação financeira é tudo de bom</p>
         </section>
+
         <section id="cursos-opcoes">
             <div class="card-cursos">
                 <img src="imagem/imagem1cursos.png" alt="imagem investimento">
@@ -41,7 +42,7 @@
                     <h2>Investimento para iniciantes</h2>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
                         voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
-                    <a href="">começar agora</a>
+                    <a href="cursoinvest.html">começar agora</a>
                 </div>
             </div>
             <div class="card-cursos">
@@ -50,7 +51,7 @@
                     <h2>Poupando e Rendendo</h2>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
                         voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
-                    <a href="">começar agora</a>
+                    <a href="cursoinvest.html">começar agora</a>
                 </div>
             </div>
             <div class="card-cursos">
@@ -60,7 +61,7 @@
                     <h2>Independência Financeira</h2>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
                         voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
-                    <a href="">começar agora</a>
+                    <a href="cursoinvest.html">começar agora</a>
                 </div>
             </div>
         </section>
@@ -71,7 +72,7 @@
 
         </div>
         <div class=" opcoes">
-            <a href="">cursos</a>
+            <a href="cursos.html">cursos</a>
             <a href="">blog</a>
             <a href="">contato</a>
         </div>
