--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div id="link-menu">
                 <nav>
-                    <a href="">CURSOS</a>
+                    <a href="cursos.html">CURSOS</a>
                     <a href="">BLOG</a>
                     <a href="">CONTATO</a>
                 </nav>
@@ -119,7 +119,7 @@
 
         </div>
         <div class=" opcoes">
-            <a href="">cursos</a>
+            <a href="cursos.html">cursos</a>
             <a href="">blog</a>
             <a href="">contato</a>
         </div>
