adicionando pagina blog.html alterações style.css e nas demais .html

--- a/cursos.html
+++ b/cursos.html
@@ -15,14 +15,14 @@
     <header>
         <div id="cabecalho">
             <div id="logo">
-                <a href="index.html"></a><img id="imagem-logo" src="imagem/dindin-logo-white(1)2.png" alt="imagem do logo">
+                <a href="index.html"><img id="imagem-logo" src="imagem/dindin-logo-white(1)2.png" alt="imagem do logo"></a>
                 <h1>dindin</h1>
             </div>
             <div id="link-menu">
                 <nav>
                     <a href="cursos.html">CURSOS</a>
-                    <a href="">BLOG</a>
-                    <a href="">CONTATO</a>
+                    <a href="blog.html">BLOG</a>
+                    <a href="contato.html">CONTATO</a>
                 </nav>
             </div>
         </div>
@@ -73,8 +73,8 @@
         </div>
         <div class=" opcoes">
             <a href="cursos.html">cursos</a>
-            <a href="">blog</a>
-            <a href="">contato</a>
+            <a href="blog.html">blog</a>
+            <a href="contato.html">contato</a>
         </div>
         <div id="link">
             <a href="">quero ser prof</a>
