adicionando pagina posts.html alteração index.html style.css contato.html e img para pagina post

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="lado-a">
                 <h1 class="titulo-index">Educação<br>Financeira<br>é tudo de bom</h1>
                 <p class="subtitulo-index">Vem comigo que te mostro <br>por onde começar</p>
-                <a class="saber-mais" href="">Quero saber mais</a>
+                <a class="saber-mais" href="cursos.html">Quero saber mais</a>
             </div>
             <div id="lado-b">
                 <img src="imagem/ilustra-banner.png" alt="Banner inicial">
@@ -44,19 +44,19 @@
                 <img src="imagem/image-invest.png" alt="imagem investimento">
                 <h2>Investimento para iniciantes</h2>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br>Wally, 25</p>
-                <a href="">começar agora</a>
+                <a href="cursos.html">começar agora</a>
             </div>
             <div class="card">
                 <img src="imagem/image-poupa.png" alt="imagem poupanca">
                 <h2>Poupando e Rendendo</h2>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>Jaden Smith, 23</p>
-                <a href="">começar agora</a>
+                <a href="cursos.html">começar agora</a>
             </div>
             <div class="card">
                 <img src="imagem/image-independencia.png" alt="imagem independencia Financeira">
                 <h2>Independência Financeira</h2>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>Whoopi Goldberg, 37</p>
-                <a href="">começar agora</a>
+                <a href="cursos.html">começar agora</a>
             </div>
         </section>
 
@@ -110,7 +110,7 @@
         </section>
 
         <section id="posts">
-            <a href="">ver todos os posts</a>
+            <a href="posts.html">ver todos os posts</a>
         </section>
     </main>
     <footer>
