--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,7 @@
                     <input type="text" placeholder="Digite seu nome">
                     <input type="email" placeholder="digite seu email">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Mensagem"></textarea>
-                    <a href="">entrar</a>
+                    <a href="">enviar</a>
                 </form>
             </div>
             <div>
